feat: add Live Data page to webapp

--- a/f1_telemetry/webapp/style.css
+++ b/f1_telemetry/webapp/style.css
@@ -12,6 +12,11 @@ body {
     background: url("art/bg.jpg") no-repeat center center fixed;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 ::-webkit-scrollbar {
     width: 0px;
     background: transparent;
